# github-commit-painting

./: .gitignore  README.md  main.py  pyproject.toml
src/tkinter_app/: custom_components.py  git_logic.py  main_window.py  utils.py
